# cat_spy_app

./: .gitignore  README.md  docker-compose.yml  feedback.md  pyproject.toml
mcp_server/: server.py  test_mcp.py  tools.py
src/application/: auth.py
src/domain/entities/: mission.py
src/domain/repositories/: cat_repository.py  mission_repository.py
src/domain/services/: mission_domain_service.py
src/infrastructure/database/repositories/: missions.py  notes.py  targets.py
src/presentation/rest/: admin.py  auth.py  cats.py
src/presentation/schemas/: missions.py  notes.py  targets.py
tests/: conftest.py
tests/integration/: test_admin.py  test_auth.py  test_cats.py
