[project]
name = "cat-spy-app"
version = "0.1.0"
description = "App for Cat Spy Agency"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.118.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
